pinentry-qt: Image on left side looks broken if pinentry shows an error
Closed, ResolvedPublic

Assigned To
Authored By
ikloecker
Mar 2 2022, 10:14 AM
Tags
Subscribers

Description

pinentry-qt with error message and weird looking image on the left side:

The image on the left side is created by overlaying the application icon with a small version of the QStyle::SP_MessageBoxCritical icon. I suppose that with other styles this looked good because the small icon looked similar to the critical icon in the Qt documentation (https://doc.qt.io/qt-5/qmessagebox.html#severity-levels-and-the-icon-and-pixmap-properties), but in the Breeze style the icon looks completely out of place.

To reproduce run pinentry as follows:

cat <<EOF | pinentry
setdesc Description bla bla bla
seterror Error error error
setprompt Prompt:
setrepeat Repeat:
option constraints-enforce
option constraints-hint-short=At least 8 characters
getpin
EOF

Revisions and Commits

Event Timeline

ikloecker triaged this task as Normal priority.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.

I will add a suitable icon from the Breeze style.

pinentry-qt with new icon: